--- a/1 - Test EE Authentication.ipynb
+++ b/1 - Test EE Authentication.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import the Earth Engine Python API library."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -8,8 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "import ee\n",
-    "from IPython.display import Image"
+    "import ee"
    ]
   },
   {
@@ -27,14 +33,15 @@
    },
    "outputs": [],
    "source": [
-    "ee.Initialize()"
+    "ee.Initialize()\n",
+    "print('Earth Engine succussfully initialized!')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create an Earth Engine image object, that refers to a 90m DEM."
+    "Create an Earth Engine image object, that refers to a 90m digital elevation model (DEM)."
    ]
   },
   {
@@ -52,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the object metadata for the srtm image object, and print it out."
+    "Print out the object metadata for the srtm image object."
    ]
   },
   {
@@ -63,8 +70,10 @@
    },
    "outputs": [],
    "source": [
-    "info = srtm.getInfo()\n",
-    "print(info)"
+    "import pprint\n",
+    "\n",
+    "pp = pprint.PrettyPrinter(depth=4)\n",
+    "pp.pprint(srtm.getInfo())"
    ]
   },
   {
@@ -82,6 +91,8 @@
    },
    "outputs": [],
    "source": [
+    "from IPython.display import Image\n",
+    "\n",
     "Image(url=srtm.getThumbUrl({'min':0, 'max':3000}))"
    ]
   },
@@ -97,21 +108,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
