Minor updates to the notebook markup.

--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Test if the notebook server is authorized to use Earth Engine\n",
     "\n",
-    "Click on the (minimized) code block below, and then press the 'Run' button."
+    "Click on the (potentially minimized) code block below and then press the 'Run' button to test if this server is authorized to talk to the Earth Engine backend servers. If the server is authorized, you should see a map. If the server is not authorized, you will see instructions for authorizing it."
    ]
   },
   {
