Minor markup formatting changes

--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "# Test if the notebook server is authorized to use Earth Engine\n",
     "\n",
-    "Click on the (potentially minimized) code block below and then press the 'Run' button to test if this server is authorized to talk to the Earth Engine backend servers. If the server is authorized, you should see a map. If the server is not authorized, you will see instructions for authorizing it."
+    "  * Click on the (potentially minimized) code block below and then press the 'Run' button to test if this server is authorized to talk to the Earth Engine backend servers.\n",
+    "  * If the server is authorized, you should see a map.\n",
+    "  * If the server is not authorized, you will see instructions for authorizing it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "codeCollapsed": true,
     "collapsed": false
@@ -98,7 +100,7 @@
     "else:\n",
     "  auth_instructions = VBox([\n",
     "      HTML(\n",
-    "        'Click <a href=\"{url}\" target=\"auth\">here</a> to start the authentication and authorization process. '\n",
+    "        'Click <a href=\"{url}\" target=\"auth\">here</a> to start the authentication and authorization process.<br/>'\n",
     "        'When you receive an authentication code, paste it in the textbox below.'.format(\n",
     "          url=ee.oauth.get_authorization_url()\n",
     "        )\n",
@@ -112,8 +114,8 @@
     "form_items = [\n",
     "  Box(\n",
     "    [\n",
-    "        Label(value='IPython widgets (ipywidgets) library version:', layout=form_row_item_desc_layout),\n",
-    "        Label(value=ipywidgets.__version__, layout=form_row_item_status_layout)\n",
+    "      Label(value='IPython widgets (ipywidgets) library version:', layout=form_row_item_desc_layout),\n",
+    "      Label(value=ipywidgets.__version__, layout=form_row_item_status_layout)\n",
     "    ],\n",
     "    layout=form_row_layout\n",
     "  ),\n",
