Moved the Earth Engine Python API import to a separate cell.

--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -13,14 +13,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "codeCollapsed": true,
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import ee\n",
+    "Check if the Earth Engine API is available on the server."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Earth Engine Python API is available on this server.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  import ee\n",
+    "  print('The Earth Engine Python API is available on this server.')\n",
+    "except ImportError:\n",
+    "  print('The Earth Engine Python API library is not available on this server.\\n'\n",
+    "        'Please see https://developers.google.com/earth-engine/python_install '\n",
+    "        'for information on installing the library.')\n",
+    "  raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "codeCollapsed": false,
+    "collapsed": false,
+    "hiddenCell": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Widget Javascript not detected.  It may not be installed or enabled properly.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ea0ce71110c4424482ec3b6324e62fc6"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "import ipywidgets\n",
     "from ipywidgets import Accordion\n",
     "from ipywidgets import Button\n",
