--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -12,15 +12,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -38,14 +29,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Earth Engine Python API is available on this server.\n"
+      "The Earth Engine Python API (version 0.1.107) is available on this server.\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "  import ee\n",
-    "  print('The Earth Engine Python API is available on this server.')\n",
+    "  print('The Earth Engine Python API (version {0}) is available on this server.'.format(\n",
+    "      ee.__version__\n",
+    "    ))\n",
     "except ImportError:\n",
     "  print('The Earth Engine Python API library is not available on this server.\\n'\n",
     "        'Please see https://developers.google.com/earth-engine/python_install '\n",
@@ -54,8 +47,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check if the IPython Widgets library is available on the server."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The IPython Widgets library (version 6.0.0) is available on this server.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  import ipywidgets\n",
+    "  print('The IPython Widgets library (version {0}) is available on this server.'.format(\n",
+    "      ipywidgets.__version__\n",
+    "    ))\n",
+    "except ImportError:\n",
+    "  print('The IPython Widgets library is not available on this server.\\n'\n",
+    "        'Please see https://github.com/jupyter-widgets/ipywidgets '\n",
+    "        'for information on installing the library.')\n",
+    "  raise\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "codeCollapsed": false,
     "collapsed": false,
@@ -63,16 +91,9 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Widget Javascript not detected.  It may not be installed or enabled properly.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea0ce71110c4424482ec3b6324e62fc6"
+       "model_id": "c132a41d31184b4a851ee9920e5d65ec"
       }
      },
      "metadata": {},
@@ -80,16 +101,6 @@
     }
    ],
    "source": [
-    "import ipywidgets\n",
-    "from ipywidgets import Accordion\n",
-    "from ipywidgets import Button\n",
-    "from ipywidgets import Layout\n",
-    "from ipywidgets import Box, HBox, VBox\n",
-    "from ipywidgets import HTML\n",
-    "from ipywidgets import Image\n",
-    "from ipywidgets import Label\n",
-    "from ipywidgets import Text\n",
-    "from IPython.display import display\n",
     "import urllib\n",
     "import cStringIO\n",
     "\n",
@@ -116,39 +127,39 @@
     "    auth_status_button.button_style = 'danger'\n",
     "    \n",
     "# Define layouts for the table.\n",
-    "form_layout = Layout(\n",
+    "form_layout = ipywidgets.Layout(\n",
     "    display='flex',\n",
     "    flex_flow='column',\n",
     "    align_items='stretch',\n",
     "    border='solid',\n",
     "    width='100%'\n",
     ")\n",
-    "form_row_layout = Layout(\n",
+    "form_row_layout = ipywidgets.Layout(\n",
     "    display='flex',\n",
     "    flex_flow='row',\n",
     ")\n",
-    "form_row_item_desc_layout = Layout(width=\"100%\")\n",
-    "form_row_item_status_layout = Layout(width=\"100%\")\n",
+    "form_row_item_desc_layout = ipywidgets.Layout(width=\"100%\")\n",
+    "form_row_item_status_layout = ipywidgets.Layout(width=\"100%\")\n",
     "\n",
     "# Define widgets that may be displayed.\n",
-    "ee_library_status_button = Button(layout=form_row_item_status_layout)\n",
-    "auth_status_button = Button(layout=form_row_item_status_layout)\n",
+    "#ee_library_status_button = ipywidgets.Button(layout=form_row_item_status_layout)\n",
+    "auth_status_button = ipywidgets.Button(layout=form_row_item_status_layout)\n",
     "\n",
-    "get_auth_textbox = Text(\n",
+    "get_auth_textbox = ipywidgets.Text(\n",
     "  placeholder='Paste authentication code here',\n",
     "  description='Code:'\n",
     ")\n",
     "get_auth_textbox.on_submit(handle_submit)\n",
     "\n",
-    "get_auth_response = Label('')\n",
+    "get_auth_response = ipywidgets.Label('')\n",
     "\n",
     "setAuthorizedStatus()\n",
     "\n",
     "if isAuthorized():\n",
     "  # Get a sample Earth Engine image.  \n",
     "  url = ee.Image(\"CGIAR/SRTM90_V4\").getThumbUrl({'min':0, 'max':3000})\n",
-    "  auth_instructions = VBox(\n",
-    "    [Image(\n",
+    "  auth_instructions = ipywidgets.VBox(\n",
+    "    [ipywidgets.Image(\n",
     "      value=cStringIO.StringIO(urllib.urlopen(url).read()).read(),\n",
     "      format='png',\n",
     "      width=400,\n",
@@ -157,8 +168,8 @@
     "    layout=form_row_item_status_layout\n",
     "  )\n",
     "else:\n",
-    "  auth_instructions = VBox([\n",
-    "      HTML(\n",
+    "  auth_instructions = ipywidgets.VBox([\n",
+    "      ipywidgets.HTML(\n",
     "        'Click <a href=\"{url}\" target=\"auth\">here</a> to start the authentication and authorization process.<br/>'\n",
     "        'When you receive an authentication code, paste it in the textbox below.'.format(\n",
     "          url=ee.oauth.get_authorization_url()\n",
@@ -171,37 +182,23 @@
     "  )\n",
     "\n",
     "form_items = [\n",
-    "  Box(\n",
+    "  ipywidgets.Box(\n",
     "    [\n",
-    "      Label(value='IPython widgets (ipywidgets) library version:', layout=form_row_item_desc_layout),\n",
-    "      Label(value=ipywidgets.__version__, layout=form_row_item_status_layout)\n",
-    "    ],\n",
-    "    layout=form_row_layout\n",
-    "  ),\n",
-    "  Box(\n",
-    "    [\n",
-    "      Label(value='Earth Engine Python API library (ee) version:', layout=form_row_item_desc_layout),\n",
-    "      Label(ee.__version__, layout=form_row_item_status_layout),\n",
-    "    ],\n",
-    "    layout=form_row_layout\n",
-    "  ),\n",
-    "  Box(\n",
-    "    [\n",
-    "      Label(value='Test Earth Engine authorization:', layout=form_row_item_desc_layout),\n",
+    "      ipywidgets.Label(value='Test Earth Engine authorization:', layout=form_row_item_desc_layout),\n",
     "      auth_status_button\n",
     "    ],\n",
     "    layout=form_row_layout\n",
     "  ),\n",
-    "  Box(\n",
+    "  ipywidgets.Box(\n",
     "    [\n",
-    "      Label(value='', layout=form_row_item_desc_layout),\n",
+    "      ipywidgets.Label(value='', layout=form_row_item_desc_layout),\n",
     "      auth_instructions\n",
     "    ],\n",
     "    layout=form_row_layout\n",
     "  )\n",
     "]\n",
     "\n",
-    "form = Box(form_items, layout=form_layout)\n",
+    "form = ipywidgets.Box(form_items, layout=form_layout)\n",
     "form"
    ]
   },
