--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -90,20 +90,15 @@
     "  get_auth_textbox.value = ''  # Clear the textbox.\n",
     "  setAuthorizedStatus()\n",
     "\n",
+    "def revoke_credentials():\n",
+    "  os.remove(ee.oauth.get_credentials_path())\n",
+    "  \n",
     "def isAuthorized():\n",
     "  try:\n",
     "    ee.Initialize()\n",
     "    return True\n",
     "  except:\n",
     "    return False\n",
-    "  \n",
-    "def setAuthorizedStatus():\n",
-    "  if isAuthorized():\n",
-    "    auth_status_button.description = 'success!'\n",
-    "    auth_status_button.button_style = 'success'\n",
-    "  else:\n",
-    "    auth_status_button.description = 'Not authorized'\n",
-    "    auth_status_button.button_style = 'danger'\n",
     "    \n",
     "# Define layouts for the table.\n",
     "form_layout = ipywidgets.Layout(\n",
@@ -117,24 +112,34 @@
     "    display='flex',\n",
     "    flex_flow='row',\n",
     ")\n",
-    "form_row_item_desc_layout = ipywidgets.Layout(width=\"100%\")\n",
-    "form_row_item_status_layout = ipywidgets.Layout(width=\"100%\")\n",
+    "form_row_item_desc_layout = ipywidgets.Layout(\n",
+    "  width=\"100%\"\n",
+    ")\n",
+    "form_row_item_status_layout = ipywidgets.Layout(\n",
+    "  width=\"100%\"\n",
+    ")\n",
     "\n",
     "# Define widgets that may be displayed.\n",
-    "#ee_library_status_button = ipywidgets.Button(layout=form_row_item_status_layout)\n",
-    "auth_status_button = ipywidgets.Button(layout=form_row_item_status_layout)\n",
-    "\n",
+    "auth_status_button = ipywidgets.Button(\n",
+    "  layout=form_row_item_status_layout\n",
+    ")\n",
     "get_auth_textbox = ipywidgets.Text(\n",
     "  placeholder='Paste authentication code here',\n",
     "  description='Code:'\n",
     ")\n",
     "get_auth_textbox.on_submit(handle_submit)\n",
-    "\n",
     "get_auth_response = ipywidgets.Label('')\n",
     "\n",
-    "setAuthorizedStatus()\n",
+    "revoke_auth_button = ipywidgets.Button(\n",
+    "  layout=form_row_item_status_layout\n",
+    ")\n",
+    "revoke_auth_button.description = 'Click to revoke authorization'\n",
+    "revoke_auth_button.button_style = 'danger'\n",
+    "revoke_auth_button.on_click = revoke_credentials\n",
     "\n",
     "if isAuthorized():\n",
+    "  auth_status_button.description = 'The server is authorized to access Earth Engine'\n",
+    "  auth_status_button.button_style = 'success'\n",
     "  # Get a sample Earth Engine image.  \n",
     "  url = ee.Image(\"CGIAR/SRTM90_V4\").getThumbUrl({'min':0, 'max':3000})\n",
     "  auth_instructions = ipywidgets.VBox(\n",
@@ -147,6 +152,8 @@
     "    layout=form_row_item_status_layout\n",
     "  )\n",
     "else:\n",
+    "  auth_status_button.description = 'Not authorized'\n",
+    "  auth_status_button.button_style = 'danger'\n",
     "  auth_instructions = ipywidgets.VBox([\n",
     "      ipywidgets.HTML(\n",
     "        'Click <a href=\"{url}\" target=\"auth\">here</a> to start the authentication and authorization process.<br/>'\n",
@@ -172,6 +179,13 @@
     "    [\n",
     "      ipywidgets.Label(value='', layout=form_row_item_desc_layout),\n",
     "      auth_instructions\n",
+    "    ],\n",
+    "    layout=form_row_layout\n",
+    "  ),\n",
+    "  ipywidgets.Box(\n",
+    "    [\n",
+    "      ipywidgets.Label(value='', layout=form_row_item_desc_layout),\n",
+    "      revoke_auth_button\n",
     "    ],\n",
     "    layout=form_row_layout\n",
     "  )\n",
