Improved the auth form

--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -35,7 +35,7 @@
     "  print('The IPython Widgets library is not available on this server.\\n'\n",
     "        'Please see https://github.com/jupyter-widgets/ipywidgets '\n",
     "        'for information on installing the library.')\n",
-    "  raise\n"
+    "  raise"
    ]
   },
   {
@@ -80,8 +80,9 @@
    },
    "outputs": [],
    "source": [
-    "import urllib\n",
     "import cStringIO\n",
+    "import os\n",
+    "import urllib\n",
     "\n",
     "def handle_submit(sender):\n",
     "  token = ee.oauth.request_token(get_auth_textbox.value.strip())\n",
@@ -90,8 +91,10 @@
     "  get_auth_textbox.value = ''  # Clear the textbox.\n",
     "  setAuthorizedStatus()\n",
     "\n",
-    "def revoke_credentials():\n",
+    "def revoke_credentials(sender):\n",
     "  os.remove(ee.oauth.get_credentials_path())\n",
+    "  print('Credentials have been revoked.')\n",
+    "  setAuthorizedStatus()\n",
     "  \n",
     "def isAuthorized():\n",
     "  try:\n",
@@ -99,7 +102,15 @@
     "    return True\n",
     "  except:\n",
     "    return False\n",
-    "    \n",
+    "\n",
+    "def setAuthorizedStatus():\n",
+    "  if isAuthorized():\n",
+    "    auth_status_button.description = 'The server is authorized to access Earth Engine'\n",
+    "    auth_status_button.button_style = 'success'\n",
+    "  else:\n",
+    "    auth_status_button.description = 'The server is not authorized to access Earth Engine'\n",
+    "    auth_status_button.button_style = 'danger'\n",
+    "\n",
     "# Define layouts for the table.\n",
     "form_layout = ipywidgets.Layout(\n",
     "    display='flex',\n",
@@ -135,11 +146,11 @@
     ")\n",
     "revoke_auth_button.description = 'Click to revoke authorization'\n",
     "revoke_auth_button.button_style = 'danger'\n",
-    "revoke_auth_button.on_click = revoke_credentials\n",
+    "revoke_auth_button.on_click(revoke_credentials)\n",
+    "\n",
+    "setAuthorizedStatus()\n",
     "\n",
     "if isAuthorized():\n",
-    "  auth_status_button.description = 'The server is authorized to access Earth Engine'\n",
-    "  auth_status_button.button_style = 'success'\n",
     "  # Get a sample Earth Engine image.  \n",
     "  url = ee.Image(\"CGIAR/SRTM90_V4\").getThumbUrl({'min':0, 'max':3000})\n",
     "  auth_instructions = ipywidgets.VBox(\n",
@@ -148,16 +159,17 @@
     "      format='png',\n",
     "      width=400,\n",
     "      height=200\n",
-    "    )],\n",
+    "    ),\n",
+    "    revoke_auth_button\n",
+    "    ],\n",
     "    layout=form_row_item_status_layout\n",
     "  )\n",
     "else:\n",
-    "  auth_status_button.description = 'Not authorized'\n",
-    "  auth_status_button.button_style = 'danger'\n",
     "  auth_instructions = ipywidgets.VBox([\n",
     "      ipywidgets.HTML(\n",
-    "        'Click <a href=\"{url}\" target=\"auth\">here</a> to start the authentication and authorization process.<br/>'\n",
-    "        'When you receive an authentication code, paste it in the textbox below.'.format(\n",
+    "        'Click on the link below to start the authentication and authorization process. '\n",
+    "        'Once you have received an authentication code, paste it in the box below and press return.'\n",
+    "        '<br/><a href=\"{url}\" target=\"auth\">Open Authentication Tab</a><br/>'.format(\n",
     "          url=ee.oauth.get_authorization_url()\n",
     "        )\n",
     "      ),\n",
@@ -167,31 +179,10 @@
     "    layout=form_row_item_status_layout\n",
     "  )\n",
     "\n",
-    "form_items = [\n",
-    "  ipywidgets.Box(\n",
-    "    [\n",
-    "      ipywidgets.Label(value='Test Earth Engine authorization:', layout=form_row_item_desc_layout),\n",
-    "      auth_status_button\n",
-    "    ],\n",
-    "    layout=form_row_layout\n",
-    "  ),\n",
-    "  ipywidgets.Box(\n",
-    "    [\n",
-    "      ipywidgets.Label(value='', layout=form_row_item_desc_layout),\n",
-    "      auth_instructions\n",
-    "    ],\n",
-    "    layout=form_row_layout\n",
-    "  ),\n",
-    "  ipywidgets.Box(\n",
-    "    [\n",
-    "      ipywidgets.Label(value='', layout=form_row_item_desc_layout),\n",
-    "      revoke_auth_button\n",
-    "    ],\n",
-    "    layout=form_row_layout\n",
-    "  )\n",
-    "]\n",
-    "\n",
-    "form = ipywidgets.Box(form_items, layout=form_layout)\n",
+    "form = ipywidgets.Box(\n",
+    "  [auth_status_button, auth_instructions],\n",
+    "  layout=form_layout\n",
+    ")\n",
     "form"
    ]
   },
