Improved the form alignment.

--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -115,19 +115,20 @@
     "form_layout = ipywidgets.Layout(\n",
     "    display='flex',\n",
     "    flex_flow='column',\n",
-    "    align_items='stretch',\n",
     "    border='solid',\n",
     "    width='100%'\n",
     ")\n",
     "form_row_layout = ipywidgets.Layout(\n",
     "    display='flex',\n",
-    "    flex_flow='row',\n",
+    "    flex_flow='row'\n",
     ")\n",
     "form_row_item_desc_layout = ipywidgets.Layout(\n",
     "  width=\"100%\"\n",
+    "\n",
     ")\n",
     "form_row_item_status_layout = ipywidgets.Layout(\n",
-    "  width=\"100%\"\n",
+    "  width=\"100%\",\n",
+    "  align_items='center'\n",
     ")\n",
     "\n",
     "# Define widgets that may be displayed.\n",
@@ -169,7 +170,9 @@
     "      ipywidgets.HTML(\n",
     "        'Click on the link below to start the authentication and authorization process. '\n",
     "        'Once you have received an authentication code, paste it in the box below and press return.'\n",
-    "        '<br/><a href=\"{url}\" target=\"auth\">Open Authentication Tab</a><br/>'.format(\n",
+    "      ),\n",
+    "      ipywidgets.HTML(\n",
+    "        '<a href=\"{url}\" target=\"auth\">Open Authentication Tab</a><br/>'.format(\n",
     "          url=ee.oauth.get_authorization_url()\n",
     "        )\n",
     "      ),\n",
