Improved the Auth instructions.

--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -113,18 +113,10 @@
     "\n",
     "# Define layouts for the table.\n",
     "form_layout = ipywidgets.Layout(\n",
-    "    display='flex',\n",
-    "    flex_flow='column',\n",
-    "    border='solid',\n",
-    "    width='100%'\n",
-    ")\n",
-    "form_row_layout = ipywidgets.Layout(\n",
-    "    display='flex',\n",
-    "    flex_flow='row'\n",
-    ")\n",
-    "form_row_item_desc_layout = ipywidgets.Layout(\n",
-    "  width=\"100%\"\n",
-    "\n",
+    "  display='flex',\n",
+    "  flex_flow='column',\n",
+    "  border='solid',\n",
+    "  width='80%'\n",
     ")\n",
     "form_row_item_status_layout = ipywidgets.Layout(\n",
     "  width=\"100%\",\n",
@@ -137,7 +129,7 @@
     ")\n",
     "get_auth_textbox = ipywidgets.Text(\n",
     "  placeholder='Paste authentication code here',\n",
-    "  description='Code:'\n",
+    "  description='Authentication Code:'\n",
     ")\n",
     "get_auth_textbox.on_submit(handle_submit)\n",
     "get_auth_response = ipywidgets.Label('')\n",
@@ -188,6 +180,15 @@
     ")\n",
     "form"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
