Major refactoring of notebook.

--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -2,30 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "# Test if the notebook server is authorized to use Earth Engine\n",
+    "# Test Access to Earth Engine\n",
     "\n",
-    "  * Click on the (potentially minimized) code block below and then press the 'Run' button to test if this server is authorized to talk to the Earth Engine backend servers.\n",
-    "  * If the server is authorized, you should see a map.\n",
-    "  * If the server is not authorized, you will see instructions for authorizing it."
+    "Run the code blocks below to test if the notebook server is authorized to communicate with the Earth Engine backend servers. Note that the code block may minimized, but you can expand them before running them."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "Check if the IPython Widgets library is available on the server."
+    "First, check if the IPython Widgets library is available on the server."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "codeCollapsed": false,
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "hiddenCell": true
    },
    "outputs": [],
    "source": [
+    "# Code to check the IPython Widgets library.\n",
     "try:\n",
     "  import ipywidgets\n",
     "  print('The IPython Widgets library (version {0}) is available on this server.'.format(\n",
@@ -40,19 +49,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "Check if the Earth Engine API is available on the server."
+    "Next, check if the Earth Engine API is available on the server."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "hiddenCell": true
    },
    "outputs": [],
    "source": [
+    "# Code to check the Earth Engine API library.\n",
     "try:\n",
     "  import ee\n",
     "  print('The Earth Engine Python API (version {0}) is available on this server.'.format(\n",
@@ -67,35 +83,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Finally, check if the notebook server is authorized to access the Earth Engine backend servers."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "codeCollapsed": false,
     "collapsed": false,
-    "hiddenCell": false
+    "deletable": true,
+    "editable": true,
+    "hiddenCell": true
    },
    "outputs": [],
    "source": [
+    "# Code to check if authorized to access Earth Engine.\n",
     "import cStringIO\n",
     "import os\n",
     "import urllib\n",
     "\n",
-    "def handle_submit(sender):\n",
-    "  token = ee.oauth.request_token(get_auth_textbox.value.strip())\n",
-    "  ee.oauth.write_token(token)\n",
-    "  get_auth_response.value = 'Successfully saved authorization token.'\n",
-    "  get_auth_textbox.value = ''  # Clear the textbox.\n",
-    "  setAuthorizedStatus()\n",
-    "\n",
-    "def revoke_credentials(sender):\n",
-    "  os.remove(ee.oauth.get_credentials_path())\n",
-    "  print('Credentials have been revoked.')\n",
-    "  setAuthorizedStatus()\n",
-    "  \n",
     "def isAuthorized():\n",
     "  try:\n",
     "    ee.Initialize()\n",
@@ -103,92 +114,106 @@
     "  except:\n",
     "    return False\n",
     "\n",
-    "def setAuthorizedStatus():\n",
-    "  if isAuthorized():\n",
-    "    auth_status_button.description = 'The server is authorized to access Earth Engine'\n",
-    "    auth_status_button.button_style = 'success'\n",
-    "  else:\n",
-    "    auth_status_button.description = 'The server is not authorized to access Earth Engine'\n",
-    "    auth_status_button.button_style = 'danger'\n",
-    "\n",
-    "# Define layouts for the table.\n",
-    "form_layout = ipywidgets.Layout(\n",
-    "  display='flex',\n",
-    "  flex_flow='column',\n",
-    "  border='solid',\n",
-    "  width='80%'\n",
-    ")\n",
-    "form_row_item_status_layout = ipywidgets.Layout(\n",
-    "  width=\"100%\",\n",
-    "  align_items='center'\n",
-    ")\n",
-    "\n",
-    "# Define widgets that may be displayed.\n",
-    "auth_status_button = ipywidgets.Button(\n",
-    "  layout=form_row_item_status_layout\n",
-    ")\n",
-    "get_auth_textbox = ipywidgets.Text(\n",
-    "  placeholder='Paste authentication code here',\n",
-    "  description='Authentication Code:'\n",
-    ")\n",
-    "get_auth_textbox.on_submit(handle_submit)\n",
-    "get_auth_response = ipywidgets.Label('')\n",
-    "\n",
-    "revoke_auth_button = ipywidgets.Button(\n",
-    "  layout=form_row_item_status_layout\n",
-    ")\n",
-    "revoke_auth_button.description = 'Click to revoke authorization'\n",
-    "revoke_auth_button.button_style = 'danger'\n",
-    "revoke_auth_button.on_click(revoke_credentials)\n",
-    "\n",
-    "setAuthorizedStatus()\n",
-    "\n",
+    "form_item_layout = ipywidgets.Layout(width=\"100%\", align_items='center')\n",
+    "  \n",
     "if isAuthorized():\n",
-    "  # Get a sample Earth Engine image.  \n",
-    "  url = ee.Image(\"CGIAR/SRTM90_V4\").getThumbUrl({'min':0, 'max':3000})\n",
-    "  auth_instructions = ipywidgets.VBox(\n",
-    "    [ipywidgets.Image(\n",
-    "      value=cStringIO.StringIO(urllib.urlopen(url).read()).read(),\n",
-    "      format='png',\n",
-    "      width=400,\n",
-    "      height=200\n",
-    "    ),\n",
-    "    revoke_auth_button\n",
-    "    ],\n",
-    "    layout=form_row_item_status_layout\n",
+    "  \n",
+    "  def revoke_credentials(sender):\n",
+    "    credentials = ee.oauth.get_credentials_path()\n",
+    "    if os.path.exists(credentials):\n",
+    "      os.remove(credentials)\n",
+    "    print('Credentials have been revoked.')\n",
+    "  \n",
+    "  # Define widgets that may be displayed.\n",
+    "  auth_status_button = ipywidgets.Button(\n",
+    "    layout=form_item_layout,\n",
+    "    disabled = True,\n",
+    "    description = 'The server is authorized to access Earth Engine',\n",
+    "    button_style = 'success',\n",
+    "    icon = 'check'\n",
     "  )\n",
+    "  \n",
+    "  instructions = ipywidgets.Button(\n",
+    "    layout=form_item_layout,\n",
+    "    description = 'Click here to revoke authorization',\n",
+    "    button_style = 'danger',\n",
+    "    disabled = False,\n",
+    "  )\n",
+    "  instructions.on_click(revoke_credentials)\n",
+    "\n",
     "else:\n",
-    "  auth_instructions = ipywidgets.VBox([\n",
+    "  \n",
+    "  def save_credentials(sender):\n",
+    "    try:\n",
+    "      token = ee.oauth.request_token(get_auth_textbox.value.strip())\n",
+    "    except Exception as e:\n",
+    "      print(e)\n",
+    "      return\n",
+    "    ee.oauth.write_token(token)\n",
+    "    get_auth_textbox.value = ''  # Clear the textbox.\n",
+    "    print('Successfully saved authorization token.')\n",
+    "\n",
+    "  # Define widgets that may be displayed.\n",
+    "  get_auth_textbox = ipywidgets.Text(\n",
+    "    placeholder='Paste authorization code here',\n",
+    "    description='Authentication Code:'\n",
+    "  )\n",
+    "  get_auth_textbox.on_submit(save_credentials)\n",
+    "\n",
+    "  auth_status_button = ipywidgets.Button(\n",
+    "    layout=form_item_layout,\n",
+    "    button_style = 'danger',\n",
+    "    description = 'The server is not authorized to access Earth Engine',\n",
+    "    disabled = True\n",
+    "  )\n",
+    "  \n",
+    "  instructions = ipywidgets.VBox(\n",
+    "    [\n",
     "      ipywidgets.HTML(\n",
     "        'Click on the link below to start the authentication and authorization process. '\n",
-    "        'Once you have received an authentication code, paste it in the box below and press return.'\n",
+    "        'Once you have received an authorization code, paste it in the box below and press return.'\n",
     "      ),\n",
     "      ipywidgets.HTML(\n",
     "        '<a href=\"{url}\" target=\"auth\">Open Authentication Tab</a><br/>'.format(\n",
     "          url=ee.oauth.get_authorization_url()\n",
     "        )\n",
     "      ),\n",
-    "      get_auth_textbox,\n",
-    "      get_auth_response\n",
+    "      get_auth_textbox\n",
     "    ],\n",
-    "    layout=form_row_item_status_layout\n",
+    "    layout=form_item_layout\n",
     "  )\n",
     "\n",
-    "form = ipywidgets.Box(\n",
-    "  [auth_status_button, auth_instructions],\n",
-    "  layout=form_layout\n",
-    ")\n",
+    "# Display the form.\n",
+    "form = ipywidgets.VBox([\n",
+    "  auth_status_button,\n",
+    "  instructions\n",
+    "])\n",
     "form"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the server is authorized, you can retrieve data from Earth Engine and use it in the notebook."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "codeCollapsed": false,
+    "collapsed": false,
+    "hiddenCell": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Code to display an Earth Engine generated image.\n",
+    "from IPython.display import Image\n",
+    "\n",
+    "url = ee.Image(\"CGIAR/SRTM90_V4\").getThumbUrl({'min':0, 'max':3000})\n",
+    "Image(url=url)"
+   ]
   },
   {
    "cell_type": "code",
