Removed the note on minimized cells.

--- a/1 - Authorize Earth Engine.ipynb
+++ b/1 - Authorize Earth Engine.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Test Access to Earth Engine\n",
     "\n",
-    "Run the code blocks below to test if the notebook server is authorized to communicate with the Earth Engine backend servers. Note that the code block may minimized, but you can expand them before running them."
+    "Run the code blocks below to test if the notebook server is authorized to communicate with the Earth Engine backend servers."
    ]
   },
   {
